Fix formatting for SlashHarvest